# telegram-antispam-shield

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  README.ru.md
.github/workflows/: ci.yml
docs/adr/: 0001-architecture.md  0002-pure-rust-classifier.md  0003-chat-access-control.md
model/: metrics.json
scripts/: requirements.txt  train_model.py
src/: config.rs  features.rs  heuristics.rs  lib.rs  main.rs  model.rs  moderation.rs
tests/: parity.rs
